<?xml version="1.0"?>
<package>
  <name>image_to_v4l2loopback</name>
  <version>0.1.0</version>
  <description>Publish ros images into a virtual v4l2 video device</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lucasw/image_to_v4l2loopback</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
